cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug215225.cpp
#define bug215225_ZZZ class bug215225_A { class bug215225_A { int i; }; };
bug215225_ZZZ;